@@ -383,6 +383,9 @@ Extension Modules
 Tests
 -----
 
+- Issue #15467: Move helpers for __sizeof__ tests into test_support.
+  Patch by Serhiy Storchaka.
+
 - Issue #15320: Make iterating the list of tests thread-safe when running
   tests in multiprocess mode. Patch by Chris Jerdonek.
 
